# Blitz

./: .gitmodules  CMakeLists.txt  README.md
Blitz/: Blitz-Core.cpp  Blitz-Core.hpp  Blitz-System.cpp  Blitz-System.hpp  Blitz-Window.cpp  Blitz-Window.hpp  CMakeLists.txt
Blitz/Graphics/: Blitz-Camera.cpp  Blitz-Camera.hpp  Blitz-IndexBuffer.cpp  Blitz-IndexBuffer.hpp  Blitz-Layer.cpp  Blitz-Layer.hpp  Blitz-Shader.cpp  Blitz-Shader.hpp  Blitz-Texture.cpp  Blitz-Texture.hpp  Blitz-VertexArray.cpp  Blitz-VertexArray.hpp  Blitz-VertexBuffer.cpp  Blitz-VertexBuffer.hpp
Blitz/Systems/: Blitz-Clock.cpp  Blitz-Clock.hpp  Blitz-File.cpp  Blitz-File.hpp  Blitz-Time.cpp  Blitz-Time.hpp
source/: main.cpp
